Fix the navigation bar being too wide

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ body {
 }
 nav {
     display: flex;
-    width: 100%;
+    width: calc(100% - 30px);
     align-items: center;
     padding: 15px;
     font-size: larger;
